Added missing info about external dependancy

--- a/src/Views/index-about.phtml
+++ b/src/Views/index-about.phtml
@@ -21,7 +21,8 @@
 			<li><a target="_blank" href="http://www.highcharts.com/">Highcharts</a>&nbsp;&ndash; cool interactive charts.</li>
 			<li><a target="_blank" href="http://tablesorter.com/">Tablesorter</a>&nbsp;&ndash; nice jQuery plugin that tidies your table up.</li>
 			<li><a target="_blank" href="https://github.com/mattfarina/farbtastic">Farbtastic</a>&nbsp;&ndash; color picker used in ratings export.</li>
-			<li><a target="_blank" href="http://sqlite.org/">SQLite</a>&nbsp;&ndash; we can&rsquo;t afford real database, so we use file-driven one.</li>
+			<li><a target="_blank" href="http://sqlite.org/">SQLite</a>&nbsp;&ndash; we can&rsquo;t afford real database, so we&rsquo;re using file-driven one.</li>
+			<li><a target="_blank" href="http://www.redbeanphp.com/">RedBeanPHP</a>&nbsp;&ndash; we needed ORM (only to write raw SQL later).</li>
 			<li><a target="_blank" href="http://php.net/">PHP 5.5</a>&nbsp;&ndash; because we like it. At least <a href="https://github.com/rr-/">rr-</a> does.</li>
 		</ul>
 	</div>
