--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -41,23 +41,26 @@ h1, h2, h3 {
 	clear: both;
 }
 
-#no-script {
-	position: fixed;
+#notice-wrapper {
 	top: 0;
 	left: 0;
 	width: 100%;
+}
+.notice {
+	background: #ffbe00;
+	color: black;
 	padding: 0.5em;
 	font-size: 10pt;
-	background: #d00;
-	border-bottom: solid 1px black;
-	color: white;
 	font-weight: bold;
+	border-bottom: solid 1px dimgray;
+	box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
 	opacity: .85;
 	text-align: center;
-	z-index: 5;
+	pointer-events: none;
 }
-#header:hover #no-script {
-	display: none;
+#no-script {
+	background: orangered;
+	color: white;
 }
 
 /* links */
