Fix for History and lists in Ratings

--- a/src/Views/user-entries-ratings.phtml
+++ b/src/Views/user-entries-ratings.phtml
@@ -26,7 +26,7 @@
 				<a target="_blank" href="<?php echo $entry->mal_link ?>">
 					<?php echo htmlspecialchars($entry->title) ?>
 				</a>
-				<span class="details">&nbsp;(<?php echo $entry->completed_duration ?> min.)</span>
+				<span class="details">&nbsp;(<?php echo $entry->finished_duration ?> min.)</span>
 			</li>
 		<?php endforeach ?>
 	</ul>
