--- a/src/Views/index-index.phtml
+++ b/src/Views/index-index.phtml
@@ -64,7 +64,7 @@
 </div>
 
 <footer>
-	<ul>
+	<ul class="horizontal">
 		<li>
 			<a class="waitable" href="https://github.com/rr-/malgraph4/releases">Version <?php echo Config::$version ?></a>
 		</li>
