--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -67,13 +67,9 @@ h1, h2, h3 {
 a {
 	color: #1969CB;
 	text-decoration: none;
-	transition: all 0.2s ease;
 }
-a span {
-	transition: all 0.2s ease;
-}
-a i {
-	transition: all 0.2s ease;
+a, a span, a i {
+	transition: opacity 0.2s ease, color 0.2s ease, background 0.2s ease;
 }
 	a:focus {
 		opacity: .8;
@@ -196,12 +192,12 @@ table.tablesorter thead tr .headerSortDown { background: #2D7De0 url('../img/des
 /* misc */
 .ad {
 	margin: 1em auto;
-	width: 728px;
 }
 #adblock-enabled {
 	display: none;
 	background: #f5f5f5;
 	padding: 0.5em;
+	max-width: 728px;
 }
 #adblock-enabled p {
 	margin-bottom: 0;
@@ -213,6 +209,7 @@ table.tablesorter thead tr .headerSortDown { background: #2D7De0 url('../img/des
 	font-size: 90%;
 }
 #google-ads {
+	width: 728px;
 	border: 1px solid silver;
 	height: 90px;
 	overflow: hidden;
