--- a/src/Views/user-menu.phtml
+++ b/src/Views/user-menu.phtml
@@ -12,6 +12,7 @@
 				</a>
 			</li>
 		</ul>
+		<div class="clear"></div>
 	</div>
 
 	<?php foreach (Media::getConstList() as $media): ?>
@@ -34,6 +35,7 @@
 				<?php endforeach ?>
 			</ul>
 		</div>
+		<div class="clear"></div>
 	<?php endforeach ?>
 	<div class="clear"></div>
 </div>
