--- a/src/Views/index-index.phtml
+++ b/src/Views/index-index.phtml
@@ -1,5 +1,5 @@
 <div id="showcase">
-	<menu>
+	<nav>
 		<ul>
 			<li>
 				<a href="#">
@@ -26,7 +26,7 @@
 				</a>
 			</li>
 		</ul>
-	</menu>
+	</nav>
 
 	<div class="tab-wrapper">
 		<div class="tab">
@@ -76,7 +76,6 @@
 		</li>
 		<li>
 			<a class="waitable" href="<?php echo IndexControllerGlobalsModule::url() ?>">Global stats</a>
-		</li>
 		</li>
 	</ul>
 </footer>
