--- a/public_html/media/css/index/index.css
+++ b/public_html/media/css/index/index.css
@@ -67,37 +67,37 @@ footer a:focus {
 	overflow: hidden;
 }
 
-#showcase menu {
+#showcase nav {
 	position: absolute;
 	bottom: 0;
 	margin: 0;
 	padding: 0;
 	width: 205px;
 }
-#showcase menu ul {
+#showcase nav ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
-#showcase menu li {
+#showcase nav li {
 	display: inline-block;
 	padding: 0;
 	margin: 0;
 }
-#showcase menu li:not(:last-of-type) {
+#showcase nav li:not(:last-of-type) {
 	margin-bottom: 2em;
 }
-#showcase menu li a {
+#showcase nav li a {
 	text-decoration: none;
 	display: inline-block;
 	color: #aaa;
 }
-#showcase menu li.active a span,
-#showcase menu li:hover a span {
+#showcase nav li.active a span,
+#showcase nav li:hover a span {
 	color: #1969CB;
 }
-#showcase menu li.active i[class*='icon'],
-#showcase menu li:hover i[class*='icon'] {
+#showcase nav li.active i[class*='icon'],
+#showcase nav li:hover i[class*='icon'] {
 	background-color: #1969CB;
 }
 
@@ -139,7 +139,7 @@ footer a:focus {
 	margin-top: 4px;
 	margin-right: 8px;
 }
-#showcase menu span {
+#showcase nav span {
 	text-decoration: none;
 	line-height: 20px;
 	width: 165px;
