--- a/src/Views/index-about.phtml
+++ b/src/Views/index-about.phtml
@@ -33,7 +33,7 @@
 	<div class="section-body">
 		<ul>
 			<li><a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">MALgraph club on MAL</a>&nbsp;&ndash; a place for questions or bug reports.</li>
-			<li><a target="_blank" href="http://www.google.com/moderator/#15/e=20db62&t=20db62.40">Suggestions Moderator</a>&nbsp;&ndash; post and vote on feature requests!</li>
+			<li><a target="_blank" href="http://www.google.com/moderator/#15/e=20db62&amp;t=20db62.40">Suggestions Moderator</a>&nbsp;&ndash; post and vote on feature requests!</li>
 			<li><a target="_blank" href="https://github.com/rr-/malgraph4">Source code on GitHub</a>&nbsp;&ndash; see how it works under the hood&hellip;</li>
 			<li><a target="_blank" href="https://github.com/rr-/malgraph4/wiki/Achievements">List of achievements</a>&nbsp;&ndash; complete with all descriptions.</li>
 		</ul>
