--- a/src/Views/user-profile-basic.phtml
+++ b/src/Views/user-profile-basic.phtml
@@ -3,7 +3,7 @@
 		<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->user->name ?>">
 			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
-		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
+		<span class="updated" data-tooltip="Time of last data update|along with position in queue" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>" data-queue-pos-url="<?php echo UserControllerQueuePositionModule::url($viewContext->user->name) ?>">
 			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
 		</span>
 		<span class="clear"></span><!-- fix for small pages -->
