--- a/public_html/media/css/user/profile.css
+++ b/public_html/media/css/user/profile.css
@@ -1,10 +1,24 @@
-.updated {
+.updated,
+.queue-pos {
 	position: absolute;
-	right: 0;
 	font-size: 65%;
 	padding-top: 0.25em;
+}
+.updated {
+	left: 0;
+}
+.queue-pos {
+	right: 0;
+}
+.updated span,
+.queue-pos span {
 	opacity: .25;
 }
+.updated a,
+.queue-pos a {
+	opacity: .8;
+}
+
 .list-views .suffix {
 	margin-left: 0.67em;
 	color: gray;
