--- a/src/Views/user-profile-basic.phtml
+++ b/src/Views/user-profile-basic.phtml
@@ -1,10 +1,15 @@
 <div class="section basic">
 	<h2>
+		<!-- use AJAXes because page gets cached and we want fresh info -->
+		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
+			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
+		</span>
+
 		<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->user->name ?>">
 			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
-		<span class="updated" data-tooltip="Time of last data update|along with position in queue" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>" data-queue-pos-url="<?php echo UserControllerQueuePositionModule::url($viewContext->user->name) ?>">
-			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
+
+		<span class="queue-pos" data-tooltip="Position in queue" data-queue-add-url="<?php echo UserControllerQueueAddModule::url($viewContext->user->name) ?>" data-queue-pos-url="<?php echo UserControllerQueuePositionModule::url($viewContext->user->name) ?>">
 		</span>
 		<span class="clear"></span><!-- fix for small pages -->
 	</h2>
