--- a/src/Views/user-ratings-time-dist.phtml
+++ b/src/Views/user-ratings-time-dist.phtml
@@ -24,7 +24,11 @@
 				</li>-->
 				<li>
 					<div>
-						<div data-tooltip="Earliest time user started or finished|<?php echo $viewContext->media == Media::Manga ? 'reading' : 'watching' ?> something, or joined MAL,|was on <?php echo date('Y-m-d', $viewContext->earliestTimeKnown) ?>.">
+						<?php if ($viewContext->earliestTimeKnown): ?>
+							<div data-tooltip="Earliest time user started or finished|<?php echo $viewContext->media == Media::Manga ? 'reading' : 'watching' ?> something, or joined MAL,|was on <?php echo date('Y-m-d', $viewContext->earliestTimeKnown) ?>.">
+						<?php else: ?>
+							<div>
+						<?php endif ?>
 							<span class="prefix">Average time</span>
 								<span class="subject"><?php printf('%.02f', $viewContext->meanTime) ?></span>
 							<span class="suffix">min/day</span>
