--- a/src/Views/user-profile-basic.phtml
+++ b/src/Views/user-profile-basic.phtml
@@ -1,7 +1,14 @@
 <div class="section basic">
+	<div id="profile-details"
+		data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>"
+		data-queue-min-wait="<?php echo Config::$userQueueMinWait ?>"
+		data-queue-add-url="<?php echo UserControllerQueueAddModule::url($viewContext->user->name) ?>"
+		data-queue-pos-url="<?php echo UserControllerQueuePositionModule::url($viewContext->user->name) ?>">
+	</div>
+
 	<h2>
 		<!-- use AJAXes because page gets cached and we want fresh info -->
-		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
+		<span class="updated" data-tooltip="Time of last data update">
 			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
 		</span>
 
@@ -9,7 +16,7 @@
 			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
 
-		<span class="queue-pos" data-tooltip="Position in queue" data-queue-add-url="<?php echo UserControllerQueueAddModule::url($viewContext->user->name) ?>" data-queue-pos-url="<?php echo UserControllerQueuePositionModule::url($viewContext->user->name) ?>">
+		<span class="queue-pos" data-tooltip="Position in queue">
 		</span>
 		<span class="clear"></span><!-- fix for small pages -->
 	</h2>
