Added option to ban users for updating only
Reason: I want to disable enqueueing users like spacecowboy, because MAL
returns 500 Internal Server Error in some documents for such users. This
effectively renders full profile updating impossible; right now the user stays
in the queue forever, being unable to update and slowing things down for other
people. I don't want to implement partial profile updating since it would add
too much unnecessary complications. Once MAL resolves problems with these
documents, profile updates for problematic users will be enabled again.

--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -60,8 +60,11 @@
 		<div class="control-group">
 			<div>
 				<button class="btn btn-success" type="submit" name="action" value="refresh">Refresh</button>
-				<button class="btn btn-success" type="submit" name="action" value="toggle-block">Toggle block</button>
 				<button class="btn btn-success" type="submit" name="action" value="wipe-cache">Wipe cache</button>
+				<br/>
+				<button class="btn btn-success" type="submit" name="action" value="unban">Unban</button>
+				<button class="btn btn-success" type="submit" name="action" value="soft-ban">Ban for updating</button>
+				<button class="btn btn-success" type="submit" name="action" value="hard-ban">Ban completely</button>
 			</div>
 		</div>
 	</fieldset>
