--- a/src/Views/user-list.phtml
+++ b/src/Views/user-list.phtml
@@ -6,7 +6,7 @@
 	<div class="section-body">
 		<?php if (count($viewContext->list) == 0): ?>
 			<p>Sadly, <?php echo $viewContext->user->name ?>&rsquo;s <?php echo Media::toString($viewContext->media) ?> list is empty.<br>
-			If this is your list, add (and rate) something and come back in 24 hours.</p>
+			If this is your list, add (and rate) something and come back in <?php echo TextHelper::getTimeText($viewContext->updateWait, TextHelper::TIME_HOURS) ?>.</p>
 		<?php elseif ($viewContext->private): ?>
 			<p>Sadly, <?php echo Media::toString($viewContext->media) ?> list of this user is private.</p>
 			<p>If this is your list, you can <a target="_blank" href="http://myanimelist.net/editprofile.php?go=listpreferences">click here</a> and change your privacy settings to make it visible.</p>
