--- a/src/Views/user-ratings-dist.phtml
+++ b/src/Views/user-ratings-dist.phtml
@@ -82,7 +82,7 @@
 							<textarea readonly="readonly" name="bbcode"><?php
 								?>[center]<?php
 								?>[url=<?php echo UserControllerProfileModule::url($viewContext->user->name, $viewContext->media) ?>]<?php
-								?>[img]<?php echo UserControllerExportModule::url($viewContext->user->name, $viewContext->media) ?>?type=1<?php
+								?>[img]<?php echo UserControllerExportModule::url($viewContext->user->name, $viewContext->media, 'type=1') ?><?php
 								?>[/img]<?php
 								?>[/url]<?php
 								?>[/center]<?php
