--- a/src/Views/index-privacy.phtml
+++ b/src/Views/index-privacy.phtml
@@ -12,7 +12,7 @@
 
 		<p>We have to make sure your lists aren&rsquo;t private, so each refresh of your data (soon after adding you to the queue) will bump up your list and profile views counters by one. The content of private lists will be hidden, and recommendations won&rsquo;t be available.</p>
 
-		<p>In short, you can sleep well - we&rsquo;re not evil and respect your privacy. If you still feel insecure, you can <a target="_blank" href="mailto:<?= Config::$mail ?>">ask us</a> to block your profile from being displayed here.</p>
+		<p>In short, you can sleep well - we&rsquo;re not evil and respect your privacy. If you still feel insecure, you can ask us to block your profile from being displayed here by sending an e-mail at <?= EmailObfuscator::embedJavascript(Config::$mail) ?>.</p>
 	</div>
 </div>
 
