--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -40,6 +40,7 @@
 			<div>
 				<button class="btn btn-success" type="submit" name="action" value="refresh">Refresh</button>
 				<button class="btn btn-success" type="submit" name="action" value="reset-franchise">Reset franchise</button>
+				<button class="btn btn-success" type="submit" name="action" value="remove">Remove from DB</button>
 			</div>
 		</div>
 	</fieldset>
